--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/runtime": "^7.11.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.2",
     "webpack-node-externals": "^2.5.2"
   }
 }
